2006-10-30  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (ID_BUILTIN, IDREF_BUILTIN): New constants.
	(<init>): Push fn:id and fn:idref.
	(walkApplyExp): Handle ID_BUILTIN and IDREF_BUILTIN.

2006-10-29  Per Bothner  <per@bothner.com>

	* XQuery.java (typeName): Map 'NOTATION' to NotationType.
	* XQParser.java (parseItemType): Error if 'cast as' or 'castable as'
	NOTATION.  Better error message for other bad type.

	* XQResolveNames.java (walkApplyExp): Use NamespaceBinding.nconc
	instead of reversing bindings, since the chain should be in
	inverse "document order".

2006-10-26  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (walkStatements): New recursive helper method.
	(resolveModule): Use it, to properly handle module-level variables.

	* XQParser.java (copyNamespacesDeclarationSeen, copyNamespacesMode):
	New fields, whihc replace the old ...
	(copyNamespacesNoInherit, copyNamespacesNoPreserve): .. removed fields.
	(parseElementConstructor, parse): Copy copyNamespacesMode to
	MakeElement instance.
	(parse): Update handling of DECLARE_COPY_NAMESPACES_TOKEN.

	* XQuery.java (getExternal): Make use of new makeWithUnknownNamespace
	method in Symbol to look for definitions with prefix-only.

	* XQParser.java (makeChildAxisStep, makeDescendantAxisStep):
	New constant static fields.
	(parseNodeTest): Make use of above constants.
	Use relatively-new PrimProcedure convenience constructor.
	(parseFLWRInner): Likewise new PrimProcedure convenience constructor.
	(parseRelativePathExpr): Optimize 'E1//child::TEST' to
	'E1/descendant::TEST'.

2006-10-25  Per Bothner  <per@bothner.com>

	No longer create Declarations for namespaces.
	Do create Symbols with prefixes for variable and functions.
	* XQuery.java (DEFAULT_ELEMENT_PREFIX): Use null, for consistency
	with NamespaceBinding.
	(DEFAULT_FUNCTION_PREFIX): Also change this constant for good measure.
	(parse): Set state to BODY_PARSED so we don't resolve twice.